[tool.poetry]
name = "api-twitter-data"
version = "0.1.0"
description = "Projeto para testar API do twitter para fins educacionais"
authors = ["Lucas Fazzi <lucasfazzi@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.13.0"
pymongo = "^4.3.3"
fastapi = "^0.95.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
